<?xml version="1.0"?>
<package>
  <name>rosjava_dynamic_reconfigure</name>
  <version>0.2.4</version>
  <description>The rosjava_dynamic_reconfigure package</description>

  <maintainer email="mick.gaillard@gmail.com">Mickaël Gaillard</maintainer>
  <maintainer email="erwan.lehuitouze@gmail.com">Erwan Le Huitouze</maintainer>
  <author email="mick.gaillard@gmail.com">Mickaël Gaillard</author>
  <author email="erwan.lehuitouze@gmail.com">Erwan Le Huitouze</author>

  <license>Apache V2</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>rosjava_core</build_depend>
  <build_depend>rosjava_build_tools</build_depend>

  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>rosjava_core</run_depend>

</package>
